# rustfolio

./: Cargo.toml
migrations/2020-07-13-182546_create_users/: up.sql
restclient/: user.http
src/: actions.rs  main.rs  models.rs  schema.rs
src/user/: mod.rs  user_actions.rs  user_api.rs  user_auth_middleware.rs  user_models.rs
