[package]
name = "rustfolio"
version = "0.1.0"
authors = ["mucks <mail@mucks.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-service = ""
serde = { version = "1", features = ["derive"] }
diesel = { version = "1", features = ["postgres", "r2d2"] }
serde_json = "1"
dotenv = ""
uuid = { version = "0.8", features = ["serde", "v4"] }
bcrypt = "0.8"
anyhow = "1"
futures = ""
jsonwebtoken = "7"
